# onestep_ml

./: .gitignore  README.md  main.py  pyproject.toml  sample.xlsx
web/: index.html
