[tool.poetry]
name = "oneclick_ml"
version = "0.1.0"
description = ""
authors = ["Atsushi Hayakawa <gepuro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Eel = "^0.14.0"
openpyxl = "^3.0.9"
pyinstaller = "4.3"
scikit-learn = "^1.0.2"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
